--- a/src/ResourceManager/ApiManagement/Commands.SMAPI.Test/Commands.ApiManagement.ServiceManagement.Test.Netcore.csproj
+++ b/src/ResourceManager/ApiManagement/Commands.SMAPI.Test/Commands.ApiManagement.ServiceManagement.Test.Netcore.csproj
@@ -22,7 +22,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Management.ApiManagement" Version="3.4.1" />
+    <PackageReference Include="Microsoft.Azure.Management.ApiManagement" Version="4.0.2-preview" />
   </ItemGroup>
 
   <ItemGroup>
