Updated test projects referencing Microsoft.VisualStudio.QualityTools.UnitTestFramework to either use the newer framework from nuget, or to remove it since it wasn't used.

--- a/.gitignore
+++ b/.gitignore
@@ -229,3 +229,5 @@ Package
 .idea
 /src/ResourceManager/RecoveryServices.Backup/**/bin
 launchSettings.json
+/src/StackAdmin/AzureRM/AzureRM.psm1
+/src/StackAdmin/AzureStack/AzureStack.psm1
