Added validation the VA policy is defined

--- a/src/ResourceManager/Sql/Commands.Sql/Commands.Sql.csproj
+++ b/src/ResourceManager/Sql/Commands.Sql/Commands.Sql.csproj
@@ -224,6 +224,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="VulnerabilityAssessment\Cmdlet\SqlDatabaseVulnerabilityAssessmentOperationCmdletBase.cs" />
     <Compile Include="VulnerabilityAssessment\Cmdlet\VulnerabilityAssessmentRuleBaseline\GetAzureSqlDatabaseVulnerabilityAssessmentRuleBaseline.cs" />
     <Compile Include="VulnerabilityAssessment\Cmdlet\VulnerabilityAssessmentRuleBaseline\RemoveSqlDatabaseVulnerabilityAssessmentRuleBaseline.cs" />
     <Compile Include="VulnerabilityAssessment\Cmdlet\VulnerabilityAssessmentRuleBaseline\SetAzureSqlDatabaseVulnerabilityAssessmentRuleBaseline.cs" />
@@ -232,10 +233,10 @@
     <Compile Include="VulnerabilityAssessment\Cmdlet\VulnerabilityAssessmentScan\ExportAzureSqlDatabaseVulnerabilityAssessmentScan.cs" />
     <Compile Include="VulnerabilityAssessment\Cmdlet\VulnerabilityAssessmentScan\GetAzureSqlDatabaseVulnerabilityAssessmentScanRecord.cs" />
     <Compile Include="VulnerabilityAssessment\Cmdlet\VulnerabilityAssessmentScan\SqlDatabaseVulnerabilityAssessmentScanCmdletBase.cs" />
-    <Compile Include="VulnerabilityAssessment\Cmdlet\VulnerabilityAssessment\GetAzureSqlDatabaseVulnerabilityAssessment.cs" />
-    <Compile Include="VulnerabilityAssessment\Cmdlet\VulnerabilityAssessment\RemoveSqlDatabaseVulnerabilityAssessment.cs" />
-    <Compile Include="VulnerabilityAssessment\Cmdlet\VulnerabilityAssessment\SetAzureSqlDatabaseVulnerabilityAssessment.cs" />
-    <Compile Include="VulnerabilityAssessment\Cmdlet\VulnerabilityAssessment\SqlDatabaseVulnerabilityAssessmentCmdletBase.cs" />
+    <Compile Include="VulnerabilityAssessment\Cmdlet\VulnerabilityAssessmentPolicy\GetAzureSqlDatabaseVulnerabilityAssessmentPolicy.cs" />
+    <Compile Include="VulnerabilityAssessment\Cmdlet\VulnerabilityAssessmentPolicy\RemoveSqlDatabaseVulnerabilityAssessmentPolicy.cs" />
+    <Compile Include="VulnerabilityAssessment\Cmdlet\VulnerabilityAssessmentPolicy\SetAzureSqlDatabaseVulnerabilityAssessmentPolicy.cs" />
+    <Compile Include="VulnerabilityAssessment\Cmdlet\VulnerabilityAssessmentPolicy\SqlDatabaseVulnerabilityAssessmentPolicyCmdletBase.cs" />
     <Compile Include="VulnerabilityAssessment\Model\DatabaseVulnerabilityAssessmentRuleBaselineItemModel.cs" />
     <Compile Include="VulnerabilityAssessment\Model\DatabaseVulnerabilityAssessmentScanEportModel.cs" />
     <Compile Include="VulnerabilityAssessment\Model\DatabaseVulnerabilityAssessmentScanErrorModel.cs" />
