--- a/src/ResourceManager/Sql/Commands.Sql/packages.config
+++ b/src/ResourceManager/Sql/Commands.Sql/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Microsoft.Azure.Management.Sql" version="1.16.0-preview" targetFramework="net452" />
   <package id="Microsoft.Azure.Management.Storage" version="2.4.0-preview" targetFramework="net45" />
+  <package id="WindowsAzure.Storage" version="9.0.0" targetFramework="net45" />	  
 </packages>
