--- a/src/ResourceManager/Profile/Commands.Profile/Commands.Profile.csproj
+++ b/src/ResourceManager/Profile/Commands.Profile/Commands.Profile.csproj
@@ -205,6 +205,6 @@
     </ItemGroup>
     <Copy SourceFiles="@(OutFiles)" DestinationFiles="@(OutFiles->'..\..\..\Stack\$(Configuration)\ResourceManager\AzureResourceManager\AzureRM.Profile\%(RecursiveDir)%(Filename)%(Extension)')" />
     <Copy SourceFiles="@(MarkdownFiles)" DestinationFolder="$(OutputPath)\help\" ContinueOnError="false" />
-    <Move SourceFiles="@(NewtonsoftJson)" DestinationFiles="$(OutputPath)\Newtonsoft.Json.10.dll" />
+    <Copy SourceFiles="@(NewtonsoftJson)" DestinationFiles="$(OutputPath)\Newtonsoft.Json.10.dll" />
   </Target>
 </Project>
