--- a/src/ResourceManager/Consumption/Commands.Consumption.Test/Commands.Consumption.Test.csproj
+++ b/src/ResourceManager/Consumption/Commands.Consumption.Test/Commands.Consumption.Test.csproj
@@ -62,8 +62,8 @@
       <HintPath>..\..\..\packages\Microsoft.Azure.Management.Authorization.2.0.0\lib\net40\Microsoft.Azure.Management.Authorization.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.Azure.Management.Consumption, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Microsoft.Azure.Management.Consumption.3.0.0\lib\net452\Microsoft.Azure.Management.Consumption.dll</HintPath>
+    <Reference Include="Microsoft.Azure.Management.Consumption, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Microsoft.Azure.Management.Consumption.3.0.1\lib\net452\Microsoft.Azure.Management.Consumption.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Azure.ResourceManager, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -129,6 +129,9 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScenarioTests\BudgetTests.cs" />
+    <Compile Include="ScenarioTests\MarketplaceTests.cs" />
+    <Compile Include="ScenarioTests\PriceSheetTests.cs" />
+    <Compile Include="ScenarioTests\ReservationTests.cs" />
     <Compile Include="ScenarioTests\UsageDetailsTests.cs" />
     <Compile Include="ScenarioTests\TestController.cs" />
   </ItemGroup>
@@ -136,6 +139,15 @@
     <None Include="MSSharedLibKey.snk" />
     <None Include="packages.config" />
     <None Include="ScenarioTests\BudgetTests.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="ScenarioTests\ReservationTests.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="ScenarioTests\PriceSheetTests.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="ScenarioTests\MarketplaceTests.ps1">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="ScenarioTests\UsageDetailsTests.ps1">
