Some test fixes. More Travis fixes/reverts from logging.

--- a/.gitignore
+++ b/.gitignore
@@ -231,3 +231,4 @@ Package
 launchSettings.json
 /src/StackAdmin/AzureRM/AzureRM.psm1
 /src/StackAdmin/AzureStack/AzureStack.psm1
+/tools/AzureRM.Netcore/AzureRM.Netcore.psm1
