--- a/src/ResourceManager/ServiceFabric/Commands.ServiceFabric/Commands.ServiceFabric.Netcore.csproj
+++ b/src/ResourceManager/ServiceFabric/Commands.ServiceFabric/Commands.ServiceFabric.Netcore.csproj
@@ -51,7 +51,7 @@
     <ProjectReference Include="..\..\..\Common\Commands.Common.Storage\Common.Storage.Netcore.csproj" />
     <ProjectReference Include="..\..\..\Common\Commands.Common.Storage.Management\Common.Storage.Management.Netcore.csproj" />
     <ProjectReference Include="..\..\..\Common\Commands.Common.Network\Common.Network.Netcore.csproj" />
-    <ProjectReference Include="..\..\..\Common\Commands.Common.Compute\Commands.Common.Compute.Netcore.csproj" />
+    <ProjectReference Include="..\..\..\Common\Commands.Common.Compute\Common.Compute.Netcore.csproj" />
     <ProjectReference Include="..\..\Common\Commands.ResourceManager.Common\Common.ResourceManager.Netcore.csproj" />
   </ItemGroup>
 
