Fix for desktop tests in keyvault and network. Testing Travis dotnet version update.

--- a/src/ResourceManager/KeyVault/Commands.KeyVault.Test/Commands.KeyVault.Test.Netcore.csproj
+++ b/src/ResourceManager/KeyVault/Commands.KeyVault.Test/Commands.KeyVault.Test.Netcore.csproj
@@ -53,7 +53,7 @@
     <None Update="Scripts\ControlPlane\KeyVaultManagementTests.ps1">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="pshtest.pfx">
+    <None Update="Resources\pshtest.pfx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
