--- a/src/ResourceManager/AzureBatch/Commands.Batch/Commands.Batch.Netcore.csproj
+++ b/src/ResourceManager/AzureBatch/Commands.Batch/Commands.Batch.Netcore.csproj
@@ -30,6 +30,7 @@
   <ItemGroup>
     <PackageReference Include="Azure.Batch" Version="8.1.1" />
     <PackageReference Include="Microsoft.Azure.Management.Batch" Version="4.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Primitives" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
