--- a/src/ResourceManager/Sql/Commands.Sql/Commands.Sql.csproj
+++ b/src/ResourceManager/Sql/Commands.Sql/Commands.Sql.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Database\Cmdlet\StopAzureSqlDatabaseActivity.cs" />
     <Compile Include="Database\Model\DatabaseReadScale.cs" />
     <Compile Include="Database\Model\AzureSqlDatabaseCreateOrUpdateModel.cs" />
+    <Compile Include="Elastic Jobs\Model\AzureSqlElasticJobStepOutputModel.cs" />
     <Compile Include="Elastic Pools\Cmdlet\StopAzureSqlElasticPoolActivity.cs" />
     <Compile Include="Failover Group\Cmdlet\AddAzureSqlDatabaseToFailoverGroup.cs" />
     <Compile Include="Failover Group\Cmdlet\AzureSqlFailoverGroupCmdletBase.cs" />
