Readded classic (obsolete) calls for DataLakeAnalytics in desktop so tests could pass (specifically AdlaTests.TestAdlaCatalog and AdlaAliasTests.TestAdlaCatalog). Made keyvault pshtest.pfx ALWAYS copy (in CI, it sometimes wouldn't copy???). Altered setup of 2 Sql tests and linked to issue.

--- a/src/ResourceManager/KeyVault/Commands.KeyVault.Test/Commands.KeyVault.Test.csproj
+++ b/src/ResourceManager/KeyVault/Commands.KeyVault.Test/Commands.KeyVault.Test.csproj
@@ -180,7 +180,7 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Resources\pshtest.pfx">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="ScenarioTests\Common.ps1">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
