--- a/src/ResourceManager/PolicyInsights/Commands.PolicyInsights.Test/Commands.PolicyInsights.Test.Netcore.csproj
+++ b/src/ResourceManager/PolicyInsights/Commands.PolicyInsights.Test/Commands.PolicyInsights.Test.Netcore.csproj
@@ -26,7 +26,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Management.PolicyInsights" Version="0.9.0-preview" />
+    <PackageReference Include="Microsoft.Azure.Management.PolicyInsights" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
