--- a/src/ResourceManager/KeyVault/Commands.KeyVault.Test/Commands.KeyVault.Test.Netcore.csproj
+++ b/src/ResourceManager/KeyVault/Commands.KeyVault.Test/Commands.KeyVault.Test.Netcore.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="Microsoft.Azure.KeyVault" Version="3.0.0-alpha" />
     <PackageReference Include="Microsoft.Azure.KeyVault.WebKey" Version="3.0.0-alpha" />
     <PackageReference Include="Microsoft.Azure.Management.KeyVault" Version="2.4.1-alpha" />
+    <PackageReference Include="Microsoft.Azure.Management.Network" Version="19.0.2-preview" />
   </ItemGroup>
 
   <ItemGroup>
